# RustPaint

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: main.rs
